MovementDetailsBuilder now added